--- a/main.tex
+++ b/main.tex
@@ -320,7 +320,7 @@ As we are breaking up the line into infinitesimal segments, we see that the func
 	A \textbf{covector} $\omega_1 : V^1 \to \mathbb{R}$ is a linear function of vectors. 
 \end{defn}
 
-Concretely, consider a spring with spring constant $k$ and with a mass $m$ attached to the end, oscillating without drag. The work necessary to pull the mass from the point $x = a$ to $x = b$ (being the starting and ending points of the line $\lambda$) is $W(\lambda) = \int_a^b -kx dx$.\footnote{We are technically getting ahead of ourselves here by presenting the function with specific coordinates. We have been entirely coordinate-free so far, and will have to wait until section 2.4 for the discussion of working with coordinates} The force (the covector) is $-kx \hat{e}_x$, and the infinitesimal segment (the vector) is $dx \hat{e}^x$. In general, a 1-functional over a 1-surface is the integrated form of a covector over vectors. This is offered without proof. 
+Concretely, consider a spring with spring constant $k$ and with a mass $m$ attached to the end, oscillating without drag. The work necessary to pull the mass from the point $x = a$ to $x = b$ (being the starting and ending points of the line $\lambda$) is $W(\lambda) = \int_a^b -kx dx$.\footnote{We are technically getting ahead of ourselves here by presenting the function with specific coordinates. We have been entirely coordinate-free so far, and will have to wait until section 2.4 for the discussion of working with coordinates} The force (the covector) is $-kx \hat{e}_x$, and the infinitesimal segment (the vector) is $dx \hat{e}^x$. In general, a 1-functional over a 1-surface is the integrated form of a covector over vectors. 
 
 
 
@@ -341,7 +341,7 @@ Concretely, consider a spring with spring constant $k$ and with a mass $m$ attac
 While we are not going to go through the trouble of proving this, we can say for any 1-functional, we will be able to find a covector that, when integrated, will be ``suitably close" to the functional. This is similar to the fact that any non-smooth line may be approximated with arbitrary precision by a smooth curve. 
 
 \begin{prop}
-	All linear 1-functionals have a corresponding covector, such that for $f : S \to \mathbb{R}$, $f = \int_{\lambda} \omega_1(d\lambda)$. In words, a linear functional applied over a line is the same as an integral of a covector over the infinitesimal segments of that line. Functionals may only be valid on certain patches in our space, however, meaning that we cannot necessarily define a form that works everywhere. 
+	All linear 1-functionals have a corresponding covector, such that for $f : S \to \mathbb{R}$, $f = \int_{\lambda} \omega_1(d\lambda)$. In words, a linear functional applied over a line is the same as an integral of a covector over the infinitesimal segments of that line. 
 \end{prop}
 
 
@@ -380,9 +380,6 @@ Using line segments or parallelograms as our infinitesimal elements is not suffi
 	$\Omega_k$ is the set of all forms of dimension k and $\Omega = \cup_{k=0}^n\Omega_k$ is the set of all forms. 
 \end{defn}
 
-A k-form may operate on multiple vectors if the sum of the ranks of the vectors equal k. That is, for $v^i \in V^k$ and $v^j \in V^j$, such that $i + j = k$, we write $\omega_k(v^i, v^j)$ to say that $\omega_k$ has been passed two vectors, from which we will get a single scalar. 
-
-
 
 
 To finish up the generalization of the previous section, we establish the relationship between k-functionals and k-forms, and between k-surfaces and k-vectors. The latter two are infinitesimal variants of the former two, and are related to one another by an integral. 
@@ -395,14 +392,15 @@ To finish up the generalization of the previous section, we establish the relati
 Now is a good time to emphasize once again that we consider "physical" that which can be directly measured in a laboratory. Infinitesimals, therefore, are not truly physical. They are a limit of the finite case. We do not measure $\omega_k(d\sigma^k)$. Rather, we measure $\int_{\sigma^k}\omega_k(d\sigma^k)$. 
 
 
-Suppose we have a mass functional $M \in F_3$ and some object $\tau \in S^3$, such that $M(\tau)$ is the mass of $\tau$.  As long as we remain finite, we can break up $\tau$ as we wish, determine the mass of each of the pieces, sum them, and we would get the same result as determining the mass of the entire ensemble, all while remaining entirely physical. The mass functional $M$ remains unchanged. As soon as we decide that we are going to be considering the infinitesimal limit, however, our tools change shape. We enter the realm of the nonphysical, so to speak. We have that $M(\tau) = \int_\tau \rho(d\tau)$, where $\rho$ is an infinitesimal functional that determines density. It is fascinating to see that as we change the assumptions that we are working with, the math will, when properly physically motivated, change form as well to reflect these new assumptions. 
-
-
-A clarification must be made now. In most treatments of electromagnetism, the magnetic field $B$ is implicitly treated as a pseudeovector. What this means is that $B$ behaves as a vector when undergoing rotation, but when undergoing reflection gains an additional sign flip. This particular characterization of $B$ depends on a notion of perpendicularity that is true for $\mathbb{R}^3$, but isn't for $\mathbb{R}^4$ and above, and is also the reason why we will not be using the cross product in our discussion here. The cross product depends on there being only one linearly independent direction normal to a surface, which is the case in $\mathbb{R}^3$. In $\mathbb{R}^4$ on the other hand, there are \emph{two} directions normal to each surface, and in general n-dimensional space, there will be (n-2) linearly independent perpendiculars. What we do instead is keep track of components using the two directions tangent to the surface, rather than by the direction normal to the surface (i.e., $B_z$ is actually $B_{xy}$). Furthermore, the cross product requires that angles be defined, from which comes perpendicularity and the normal vector, and the reader may have noticed that we have not yet given any notion of angles. Defining angles is beyond the scope of what we're doing here. 
+Suppose we have a mass functional $M \in F_3$ and some object $\tau \in S^3$, such that $M(\tau)$ is the mass of $\tau$.  As long as we remain finite, we can break up $\tau$ as we wish, determine the mass of each of the pieces, sum them, and we would get the same result as determining the mass of the entire ensemble, all while remaining entirely physical. The mass functional $M$ remains unchanged. As soon as we decide that we are going to be considering the infinitesimal limit, however, our tools change shape. We have that $M(\tau) = \int_\tau \rho(d\tau)$, where $\rho$ is a 3-form that determines density. It is fascinating to see that as we change the assumptions that we are working with, the math will, when properly physically motivated, change form as well to reflect these new assumptions. 
 
 
 
-Consider the problem now of constructing surfaces, volumes, and their higher dimensional equivalents. Arranging two 1-vectors $\vec{a}$ and $\vec{b}$ such that they both share a starting point allows one to construct a paralellogram (a 2-vector) with sides made up of the 1-vectors. The area and orientation of this 2-vector depends on the magnitudes and orientations of the two component 1-vectors. In 3D space, this orientation would be the line normal to the 2-surface, but we are not necessarily in 3D space. By flipping the direction of one of the vectors, the area of the resulting 2-vector would be the same as before, but the orientation (the normal) would be flipped. What's happening here is that we are combining two 1-vectors to create a 2-vector. This same mechanism works for a 1-vector and a 2-vector, creating a 3-vector, as well as for the arbitrary m-vector and n-vector, creating an (m+n) vector (though for vectors of degree greater than three, this is much harder to visualize). We require also that our method for combining k-vectors is anticommutitive or skew-symmetric; that is, by flipping the order of the components, the magnitude remains the same, but the orientation flips. The tool that does this is the \textbf{wedge product}.
+[\textbf{Start a new section discussing this stuff, and then talk about perpendicularity usw after the definition of wedge product to differentiate it from the cross product. Basically want to have two point: 1: The cross product needs perpendicularity, which we don't have; 2: even if we had it, it would depend on the dimensionality of the manifold, so we don't want it anyways. We can talk about pseudovectors afterwards (they're 2-forms in 3D). We can then talk about how in SR (4D), the perpendicular (hodge dual) is still a tensor rank 2.}]
+
+\section{Wedge Product and Perpendicularity}
+
+Consider the problem now of constructing surfaces, volumes, and their higher dimensional equivalents. Arranging two 1-vectors $\vec{a}$ and $\vec{b}$ such that they both share a starting point allows one to construct a paralellogram (a 2-vector) with sides made up of the 1-vectors. The area and orientation of this 2-vector depends on the magnitudes and orientations of the two component 1-vectors. In 3D space, this orientation would be the line normal to the 2-surface, but we are not necessarily in 3D space. By flipping the direction of one of the vectors, the area of the resulting 2-vector would be the same as before, but the orientation (the normal) would be flipped. This same mechanism works for a 1-vector and a 2-vector, creating a 3-vector, as well as for the arbitrary m-vector and n-vector, creating an (m+n)-vector (though for vectors of degree greater than three, this is much harder to visualize). We require also that our method for combining k-vectors is anticommutative or skew-symmetric; that is, by flipping the order of the components, the magnitude remains the same, but the orientation flips. The tool that does this is the \textbf{wedge product}.
 \textbf{Probably put a picture of that here}
 
 
@@ -411,10 +409,18 @@ Consider the problem now of constructing surfaces, volumes, and their higher dim
 	
 	The \textbf{wedge product} $\wedge : V^k\times V^j \to V^{k+j}$ combines k-vectors antisymmetrically to generate parallelepipeds. 
 \end{defn}
+	
+ This discussion of joining vectors together and resulting normal vectors brings to mind a tool from vector calculus: the cross product. If we have two vectors $\vec{a}$ and $\vec{b}$ in $\mathbb{R}^3$, the cross product of them $\vec{a} \times \vec{b}$ will return the vector perpendicular to the two of them. Furthermore, by flipping order of the product, a minus sign is introduced, indicating that the magnitude is the same, but the orientation is flipped. That is, $\vec{a} \times \vec{b} = -(\vec{b} \times \vec{a})$. It is likely the case that the reader will be more familiar with the cross product, and may be wondering why we will be forgoing it in favor of the less familiar wedge product. This is because the cross product fails to generalize to any space beyond $\mathbb{R}^3$. It is in some sense a specific case of the wedge product, but with some crucial fundamental differences. The cross product depends on there being only one linearly independent direction normal to a surface, which is the case in $\mathbb{R}^3$. In $\mathbb{R}^4$ on the other hand, there are \emph{two} directions normal to each surface, and in general n-dimensional space, there will be (n-2) linearly independent perpendiculars. What we do instead is keep track of components using the two directions tangent to the surface, rather than by the direction normal to the surface. Furthermore, the cross product requires that angles be defined, from which comes perpendicularity and the normal vector, and the reader may have noticed that we have not yet given any notion of angles. Defining angles is beyond the scope of what we're doing here. For our purposes here, because we are striving for generality in describing physical systems, we will be focusing our attention on the wedge product, rather than the cross product. 
+
+
+
+A clarification must be made now. In most treatments of electromagnetism, the magnetic field $B$ is implicitly treated as a pseudeovector. What this means is that $B$ behaves as a vector when undergoing rotation, but when undergoing reflection gains an additional sign flip. This particular characterization of $B$ depends on a notion of perpendicularity that is true for $\mathbb{R}^3$, but isn't for $\mathbb{R}^4$ and above, and is also the reason why we will not be using the cross product in our discussion here.
 
 
 
 
+
+A k-form may operate on multiple vectors if the sum of the ranks of the vectors equal k. That is, for $v^i \in V^i$ and $v^j \in V^j$, such that $i + j = k$, we write $\omega_k(v^i, v^j)$ to say that $\omega_k$ has been passed two vectors, from which we will get a single scalar. [\textbf{This comes out of nowhere. Why does this happen?}]
 
 
 Consider $\omega_k \in \Omega^k$, $v^i \in V^i$, and $u^j \in V^j$ such that $i + j = k$. We may equivalently express $\omega_k(v^i, v^j)$ as an operation on the wedge of $v^i$ and $u^j$ such that \begin{gather}\omega_k(v^i, u^j) = \omega_k(v^i \wedge u^j) = -\omega_k(u^j \wedge v^i).\end{gather} We can say also that \begin{gather}\omega_k(v^i \wedge u^j) = \omega_i(v^i)\wedge \omega_j(u^j) = -\omega_j(u^j) \wedge \omega_i(v^i).\end{gather} We see therefore that the skew-symmetric nature of k-vectors carries over to the k-forms. 
@@ -438,11 +444,11 @@ Generally speaking, expressing the operation of a k-form on an i-vector and j-ve
 Up until this point in our discussion of k-forms and k-vectors, we've remained in a general coordinate-free form. For a conceptual understanding of the tools in use, this is just fine, and is in fact preferable. It shows that the math up until this point is "universal," and can be applied to any frame of reference without sacrificing scientific validity. Furthermore, it should be noted that nature itself is coordinate-free. The universe doesn't come prepackaged with coordinates, rather they are something that humans have created to streamline scientific investigation. The caveat to this is that while coordinate-free works well for conceptual understanding, it isn't all that useful for solving actual problems in physics, which is the entire point. Therefore, in this section, we will begin imposing coordinates on the systems we're working with. 
 
 
-Recall now definitions 1.1 and 1.2, and say we have a point $P$ on a manifold $X$, and let $dP$ be a displacement starting at point $P$. At this moment, the vector is coordinate-free; a thing "in itself", if you will. In some neighborhood of $P$ there will be a coordinate system defined that we can use to describe $dP$. Mathematically, this relates to defining the coordinate system in terms of the \textbf{basis}, and assigning $dP$ directional components  along each basis vector, the sum of which gives us $dP$. So, \begin{gather}dP = dx^i \frac{\partial P}{\partial x^i} = dx^i e_i,\end{gather} where $e_i$ is the ith basis vector, and $dx^i$ is the vector component along that basis.\footnote{There is an implied sum over $i$ here. That is, $\sum_i^n dx^i e_i = dx^i e_i$} In other words, we can say that $dx^1e_1$ gives us an infinitesimal segment along $x^1$, $dx^2e_2$ along $x^2$, and so on. 
+Recall now definitions 1.1 and 1.2, and say we have a point $P$ on a manifold $X$, and let $dP$ be an infinitesimal segment starting at point $P$. At this moment, the vector is coordinate-free; a thing "in itself", if you will. In some neighborhood of $P$ there will be a coordinate system defined that we can use to describe $dP$. Mathematically, this relates to defining the coordinate system in terms of the \textbf{basis}, and assigning $dP$ directional components  along each basis vector, the sum of which gives us $dP$. So, \begin{gather}dP = dx^i \frac{\partial P}{\partial x^i} = dx^i e_i,\end{gather} where $e_i$ is the ith basis vector, and $dx^i$ is the vector component along that basis.\footnote{There is an implied sum over $i$ here. That is, $\sum_i^n dx^i e_i = dx^i e_i$} In other words, we can say that $dx^1e_1$ gives us an infinitesimal segment along $x^1$, $dx^2e_2$ along $x^2$, and so on. 
 
 
 \begin{defn}
-	The \textbf{basis} of a space are a set of linearly independent directions such that any element of that space may be constructed using the basis vectors. In $\mathbb{R}^3$, the basis vectors are equivalently $(e^1, e^2, e^3), (\hat{x}, \hat{y}, \hat{z}), (\hat{i}, \hat{j}, \hat{k})$, among others. We can see from (2.16) that the basis can be thought of as a ratio between differentials and infinitesimal segments. 
+	The \textbf{basis} of a space are a set of linearly independent directions such that any element of that space may be constructed using the basis vectors. In $\mathbb{R}^3$ using Cartesian coordinates, the basis vectors are equivalently $(e^1, e^2, e^3), (\hat{x}, \hat{y}, \hat{z}), (\hat{i}, \hat{j}, \hat{k})$, among others. We can see from (2.16) that the basis can be thought of as a ratio between differentials and infinitesimal segments. 
 \end{defn}
 
 
@@ -450,7 +456,8 @@ Recall now definitions 1.1 and 1.2, and say we have a point $P$ on a manifold $X
 
 \textbf{NOTE: Tread carefully with the language. }
 
-Functionals will be dealt with in a similar way. Let $\omega$ be a covector and $d\lambda$ be an infinitesimal segment. Then $\omega(d\lambda)$ is a linear function of the coordinate differences along $d\lambda$. Therefore we can write $\omega = \omega_i \frac{\partial x^i}{\partial \lambda} = \omega_i e^i$ where each $e^i$ is a basis vector. In fact, $e^i(d\lambda) = e^i(dx^j e_j) = dx^j e^i(e_j) = dx^j \delta^i_j = dx^i$.\footnote{$\delta^i_j$ is the Kronecker delta, defined to equal 1 when i = j, and 0 otherwise}
+[\textbf{Use dP here instead of dlambda, since we used dP}]
+Functionals will be dealt with in a similar way. Let $\omega$ be a covector and $d\lambda$ be an infinitesimal segment. Then $\omega(d\lambda)$ is a linear function of the coordinate differences along $d\lambda$. Therefore we can write $\omega = \omega_i \frac{\partial x^i}{\partial \lambda} = \omega_i e^i$ where each $e^i$ is a basis covector. In fact, $e^i(d\lambda) = e^i(dx^j e_j) = dx^j e^i(e_j) = dx^j \delta^i_j = dx^i$.\footnote{$\delta^i_j$ is the Kronecker delta, defined to equal 1 when i = j, and 0 otherwise}
 \textbf{We can say that $\omega(d\lambda) = \omega_i dx^i$}
 
 Putting everything together now, for infinitesimal segment d$\lambda$ and k-form $\omega$, $\omega(d\lambda) = \omega_ie^i(dx^je_j) = \omega_idx^je^ie_j = \omega_idx^j\delta^i_j = \omega_i dx^i$. This is an interesting result: when properly defined and carefully applied to each other, a vector and covector together naturally simplify down to a linear combination of infinitesimal segments. 
